# MultiplAI

./: .dockerignore  .env.example  .gitignore  AGENTS.md  AUTODEV_GUIDE.md  CLAUDE.md  DEPLOYMENT_GUIDE.md  Dockerfile  Dockerfile.cua  IMPLEMENTATION_SUMMARY.md  LEARNINGS.md  MODEL_CONFIGURATION.md  PLAN_MULTI_AGENT.md  PMVP_ISSUES.md  README.md  SYSTEM_PROMPT.md  TESTING.md  TEST_RESULTS.md  USER_FRIENDLY_SUMMARY.md  docker-compose.cua.yml  fly.toml  package-lock.json  package.json  pnpm-lock.yaml  reset-tasks.ts  run-all-tests.sh  setup.ts  test-e2e.ts  tsconfig.json  turbo.json  upgrade.md
.github/: copilot-instructions.md
.tmp/: github-issues-backup-20251212-151622.json  issue-135.md  issue-193.md  issue-196.md  issue-200.md  issue-201.md  issue-202.md  issue-203.md  issue-204.md  issue-205.md  issue-206.md  issue-207.md  issue-208.md  issue-209.md  issue-210.md  issue-211.md  issue-212.md  issue-213.md  issue-214.md  issue-215.md  issue-216.md  issue-217.md  issue-218.md  issue-219.md  issue-220.md  issue-221.md  issue-222.md  issue-223.md  issue-224.md  issue-225.md  issue-226.md  issue-227.md  issue-228.md  issue-229.md  issue-230.md  issue-231.md  issue-232.md  issue-233.md  issue-234.md  issue-235.md  (+11 more)
autodev-dashboard/: .env.example  App.tsx  README.md  index.html  metadata.json  package.json  types.ts  (+1 more)
langgraph_service/: Dockerfile  README.md  pyproject.toml
langgraph_service/src/multiplai/: __init__.py  config.py  types.py
langgraph_service/src/multiplai/nodes/: __init__.py  create_pr.py  execute_issue.py  load_context.py  plan_issue.py
(+270 files in other folders)
