[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langgraph-service"
version = "0.1.0"
description = "LangGraph service for AI agent orchestration"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.0.1",
    "langchain>=0.1.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
]

[tool.hatch.build.targets.wheel]
packages = ["langgraph_service"]