[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langgraph-service"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "langchain-core>=0.1.38",
    "langchain-anthropic>=0.1.4",
    "langchain-openai>=0.0.8",
    "pydantic>=2.6.0",
    "httpx>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["langgraph_service"]